; ModuleID = '/home/carl/AnghaBench/linux/ipc/extr_util.c_ipc_obtain_object_check.c'
source_filename = "/home/carl/AnghaBench/linux/ipc/extr_util.c_ipc_obtain_object_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kern_ipc_perm = type { i32 }
%struct.ipc_ids = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.kern_ipc_perm* @ipc_obtain_object_check(%struct.ipc_ids* %0, i32 %1) #0 {
  %3 = alloca %struct.kern_ipc_perm*, align 8
  %4 = alloca %struct.ipc_ids*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.kern_ipc_perm*, align 8
  store %struct.ipc_ids* %0, %struct.ipc_ids** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ipc_ids*, %struct.ipc_ids** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.kern_ipc_perm* @ipc_obtain_object_idr(%struct.ipc_ids* %7, i32 %8)
  store %struct.kern_ipc_perm* %9, %struct.kern_ipc_perm** %6, align 8
  %10 = load %struct.kern_ipc_perm*, %struct.kern_ipc_perm** %6, align 8
  %11 = call i64 @IS_ERR(%struct.kern_ipc_perm* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %24

14:                                               ; preds = %2
  %15 = load %struct.kern_ipc_perm*, %struct.kern_ipc_perm** %6, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i64 @ipc_checkid(%struct.kern_ipc_perm* %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  %22 = call %struct.kern_ipc_perm* @ERR_PTR(i32 %21)
  store %struct.kern_ipc_perm* %22, %struct.kern_ipc_perm** %3, align 8
  br label %26

23:                                               ; preds = %14
  br label %24

24:                                               ; preds = %23, %13
  %25 = load %struct.kern_ipc_perm*, %struct.kern_ipc_perm** %6, align 8
  store %struct.kern_ipc_perm* %25, %struct.kern_ipc_perm** %3, align 8
  br label %26

26:                                               ; preds = %24, %19
  %27 = load %struct.kern_ipc_perm*, %struct.kern_ipc_perm** %3, align 8
  ret %struct.kern_ipc_perm* %27
}

declare dso_local %struct.kern_ipc_perm* @ipc_obtain_object_idr(%struct.ipc_ids*, i32) #1

declare dso_local i64 @IS_ERR(%struct.kern_ipc_perm*) #1

declare dso_local i64 @ipc_checkid(%struct.kern_ipc_perm*, i32) #1

declare dso_local %struct.kern_ipc_perm* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
